<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.seafight.userinterface.StartFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_start" >
    </fragment>
    <fragment
        android:id="@+id/nav_game"
        android:name="com.example.seafight.userinterface.BattleFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_game" />
    <fragment
        android:id="@+id/nav_signin"
        android:name="com.example.seafight.userinterface.SigninFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_signin" >
    </fragment>
    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.seafight.userinterface.UserAccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" >
    </fragment>
</navigation>