<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".userinterface.StartFragment">

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/createGameCodeCreate"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="4dp"
                android:text="@string/create" />

            <Button
                android:id="@+id/createGameCodeConnect"
                android:layout_width="150dp"
                android:textSize="12sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="4dp"
                android:text="@string/connect" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/createGameCodeGenerate"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="4dp"
                android:text="@string/generate" />

            <Button
                android:id="@+id/createGameCodeCopy"
                android:textSize="12sp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="4dp"
                android:text="@string/copy" />

        </LinearLayout>

    </LinearLayout>
    <EditText
        android:hint="@string/code"
        android:width="300dp"
        android:gravity="center"
        android:id="@+id/createGameCodeInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <TableLayout
        android:id="@+id/field"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>


</LinearLayout>