<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:text="Процент побед: "
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="20sp"
                android:text="Wins value"
                android:textColor="@color/yellow"
                android:layout_width="wrap_content"
                android:id="@+id/winrate"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:text="Победы: "
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/wins"
                android:textColor="@color/green"
                android:text="Wins value"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:text="Проигрыши: "
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/losses"
                android:textColor="@color/red"
                android:text="Wins value"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/account_section"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        tools:context=".userinterface.UserAccountFragment">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/little_cell_size"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="200dp"
                android:layout_gravity="top"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <Button
                    android:layout_width="match_parent"
                    android:id="@+id/choose_file"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_file" />
                <Button
                    android:id="@+id/upload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upload" />
                <Button
                    android:id="@+id/save"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/save" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/logoutButton"
                    android:text="@string/logout" />
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:id="@+id/progress_upload"
                    android:visibility="invisible"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/name"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_hint" />
                <ImageView
                    android:id="@+id/user_image"
                    android:layout_width="220dp"
                    android:layout_height="220dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>